fix project title font sizes, word wrap on name

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,10 @@
   .text-name {
     @apply text-black text-2xl md:text-3xl lg:text-4xl xl:text-5xl tracking-tight;
   }
-  .text-description {
+  .project-title {
+    @apply text-l-wheat text-base md:text-lg lg:text-xl xl:text-2xl text-center mt-1 tracking-tight;
+  }
+  .project-description {
     @apply text-sm md:text-base lg:text-lg xl:text-xl tracking-tight;
   }
   .emgrad {
